# omts

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.claude/: CLAUDE.md
.claude/commands/: expert-panel.md  implement.md  spec-implementation-plan.md
.github/workflows/: ci.yml
docs/: roadmap.md  vision.md
docs/governance/: tsc-charter.md
docs/guides/: supplier-data-collection.md
docs/reviews/: binary-format-panel-report.md  (+28 more)
omts-rs/: Cargo.toml  README.md  justfile
omts-rs/crates/omts-cli/: Cargo.toml
omts-rs/crates/omts-cli/src/: error.rs  format.rs  io.rs  main.rs
omts-rs/crates/omts-cli/src/cli/: mod.rs  tests.rs
omts-rs/crates/omts-cli/src/cmd/: convert.rs  export.rs  import.rs  init.rs  inspect.rs  merge.rs  mod.rs  path.rs  query.rs  reach.rs  redact.rs  selectors.rs  subgraph.rs  validate.rs
omts-rs/crates/omts-cli/src/cmd/diff/: human.rs  json.rs  mod.rs
omts-rs/crates/omts-cli/tests/: cmd_convert.rs  cmd_diff.rs  cmd_export.rs  cmd_import.rs  cmd_init.rs  cmd_inspect.rs  cmd_merge.rs  cmd_multi_encoding.rs  cmd_path.rs  cmd_query.rs  cmd_reach.rs  cmd_redact.rs  cmd_subgraph.rs  cmd_validate.rs  e2e_import_all_commands.rs  e2e_merge.rs  e2e_merge_regression.rs  e2e_pipelines.rs  e2e_redaction.rs  e2e_supplier_list.rs  e2e_ux_polish.rs
omts-rs/crates/omts-wasm/: Cargo.toml
omtsf-rs/: Cargo.toml  README.md  deny.toml  justfile
schema/: omts-v0.1.0.schema.json
spec/: LICENSE  entity-identification.md  erp-integration.md  graph-data-model.md  merge-semantics.md  selective-disclosure.md  serialization-bindings.md  standards-mapping.md
(+336 files in other folders)
