[package]
name = "omts-wasm"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "WASM bindings for the Open Multi-Tier Supply-Chain"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
omts-core = { path = "../omts-core", version = "0.1.0" }

[lints]
workspace = true
